--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 # 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
 ################################################################################
 
-/Bob.Abp.AppGen/.vs
 /Bob.Abp.AppGen/obj
+/Bob.Abp.AppGen/bin/Debug
