supports more flexiable create/edit code template and template groups.

--- a/Bob.Abp.AppGen/Bob.Abp.AppGen.csproj
+++ b/Bob.Abp.AppGen/Bob.Abp.AppGen.csproj
@@ -67,14 +67,13 @@
     <Compile Include="Models\AhCodeElement.cs" />
     <Compile Include="Models\AhEditPoint.cs" />
     <Compile Include="DteExtension\DteExtension.cs" />
+    <Compile Include="Models\Enums\AbpMainFile.cs" />
     <Compile Include="Models\Enums\PropertyGroupType.cs" />
     <Compile Include="Models\PropertyGroup.cs" />
     <Compile Include="Models\Enums\AbpMiscFile.cs" />
     <Compile Include="Models\Enums\EntityKinds.cs" />
     <Compile Include="Models\Enums\Postions.cs" />
     <Compile Include="DteExtension\LocalizationFile.cs" />
-    <Compile Include="Models\Enums\AbpCreateFile.cs" />
-    <Compile Include="Models\Enums\AbpEditFile.cs" />
     <Compile Include="Models\Enums\AbpProjectType.cs" />
     <Compile Include="Models\AhEntity.cs" />
     <Compile Include="Models\LanguageResource.cs" />
@@ -98,22 +97,22 @@
     <EmbeddedResource Include="Templates\Contracts\IAppService.vue" />
     <EmbeddedResource Include="Templates\Contracts\DtoRequest.vue" />
     <EmbeddedResource Include="Templates\Usings.vue" />
-    <EmbeddedResource Include="Templates\Contracts\PermissionConst.vue" />
-    <EmbeddedResource Include="Templates\Contracts\PermissionDefine.vue" />
-    <EmbeddedResource Include="Templates\Application\AutoMapper.vue" />
+    <EmbeddedResource Include="Templates\Contracts\PermissionConst_Main.vue" />
+    <EmbeddedResource Include="Templates\Contracts\PermissionDefine_Main.vue" />
+    <EmbeddedResource Include="Templates\Application\AutoMapper_Main.vue" />
     <EmbeddedResource Include="Templates\Contracts\PermissionDefine_Calling.vue" />
     <EmbeddedResource Include="Templates\Application\AutoMapper_Calling.vue" />
-    <EmbeddedResource Include="Templates\MongoDB\IDbContext.vue" />
-    <EmbeddedResource Include="Templates\MongoDB\DbContext.vue" />
+    <EmbeddedResource Include="Templates\MongoDB\IDbContext_Main.vue" />
+    <EmbeddedResource Include="Templates\MongoDB\DbContext_Main.vue" />
     <EmbeddedResource Include="Templates\MongoDB\DbContext_Calling.vue" />
     <EmbeddedResource Include="Templates\Web\AutoMapper_Calling.vue" />
-    <EmbeddedResource Include="Templates\Web\AutoMapper.vue" />
-    <EmbeddedResource Include="Templates\Web\PageToolbar.vue" />
+    <EmbeddedResource Include="Templates\Web\AutoMapper_Main.vue" />
+    <EmbeddedResource Include="Templates\Web\PageToolbar_Main.vue" />
     <EmbeddedResource Include="Templates\Web\PageToolbar_Calling.vue" />
-    <EmbeddedResource Include="Templates\Web\PageAuthorization.vue" />
+    <EmbeddedResource Include="Templates\Web\PageAuthorization_Main.vue" />
     <EmbeddedResource Include="Templates\Web\PageAuthorization_Calling.vue" />
     <EmbeddedResource Include="Templates\Web\Menu\Consts.vue" />
-    <EmbeddedResource Include="Templates\Web\Menu\Contributor.vue" />
+    <EmbeddedResource Include="Templates\Web\Menu\Contributor_Main.vue" />
     <EmbeddedResource Include="Templates\Web\Menu\ContributorModify_Calling.vue" />
     <EmbeddedResource Include="Templates\Application\AutoMapper_Using.vue" />
     <EmbeddedResource Include="Templates\MongoDB\IDbContext_Using.vue" />
@@ -122,7 +121,7 @@
     <EmbeddedResource Include="Templates\Web\PageToolbar_Using.vue" />
     <EmbeddedResource Include="Templates\Web\PageAuthorization_Using.vue" />
     <EmbeddedResource Include="Templates\Web\Menu\Contributor_Calling.vue" />
-    <EmbeddedResource Include="Templates\Web\Menu\ContributorModify.vue" />
+    <EmbeddedResource Include="Templates\Web\Menu\ContributorModify_Main.vue" />
     <EmbeddedResource Include="Templates\Web\Menu\ContributorModify_Using.vue" />
     <EmbeddedResource Include="Templates\HttpApi\Controller.vue" />
     <EmbeddedResource Include="Templates\Web\Page\Index.vue" />
@@ -141,12 +140,12 @@
     <EmbeddedResource Include="Templates\Web\Page\CreateJs.vue" />
     <EmbeddedResource Include="Templates\Web\Page\EditJs.vue" />
     <EmbeddedResource Include="Templates\Web\Menu\MenuItemInfo.vue" />
-    <EmbeddedResource Include="Templates\EntityFrameworkCore\CreatingExtensions.vue" />
+    <EmbeddedResource Include="Templates\EntityFrameworkCore\CreatingExtensions_Main.vue" />
     <EmbeddedResource Include="Templates\EntityFrameworkCore\CreatingExtensions_Calling.vue" />
     <EmbeddedResource Include="Templates\EntityFrameworkCore\CreatingExtensions_Using.vue" />
-    <EmbeddedResource Include="Templates\EntityFrameworkCore\DbContext.vue" />
+    <EmbeddedResource Include="Templates\EntityFrameworkCore\DbContext_Main.vue" />
     <EmbeddedResource Include="Templates\EntityFrameworkCore\DbContext_Using.vue" />
-    <EmbeddedResource Include="Templates\EntityFrameworkCore\IDbContext.vue" />
+    <EmbeddedResource Include="Templates\EntityFrameworkCore\IDbContext_Main.vue" />
     <EmbeddedResource Include="Templates\EntityFrameworkCore\IDbContext_Using.vue" />
     <EmbeddedResource Include="Templates\Domain\IRepository.vue" />
     <EmbeddedResource Include="Templates\EntityFrameworkCore\Repository.vue" />
