fix: CreatingExtensions.vue should be an EmbeddedResource file.

--- a/Bob.Abp.AppGen/Bob.Abp.AppGen.csproj
+++ b/Bob.Abp.AppGen/Bob.Abp.AppGen.csproj
@@ -89,7 +89,7 @@
     <Compile Include="TemplateDataModel\TemplateDataExtension.cs" />
     <Compile Include="TemplateDataModel\TemplateCoreData.cs" />
     <Compile Include="TemplateDataModel\TemplateType.cs" />
-    <None Include="Templates\EntityFrameworkCore\CreatingExtensions.vue" />
+    <EmbeddedResource Include="Templates\EntityFrameworkCore\CreatingExtensions.vue" />
     <Compile Include="Utils.cs" />
     <Compile Include="TemplateDataModel\TemplateData.cs" />
     <EmbeddedResource Include="Templates\Application\AppService.vue" />
