--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-﻿################################################################################
-# 此 .gitignore 文件已由 Microsoft(R) Visual Studio 自动创建。
-################################################################################
+﻿# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
 
-/Bob.Abp.AppGen/obj
-/Bob.Abp.AppGen/bin/Debug
-/.vs
+# Visual Studio 2015 cache/options directory
+.vs/
